fix: change behavior of instructions tooltip: now it's always visible on first open

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -48,7 +48,7 @@ $max-width: 1440px;
 $transition: all 0.3s ease;
 $row-height: 3rem;
 
-$appland-text-font-family: 'IBM Plex Sans', sans-serif;
+$appland-text-font-family: 'IBM Plex Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $fa-font-path: "/webfonts";
 
 $overlay: rgba($blue, .5);
